deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gokub-tester
  labels:
    app: gokub-tester
spec:
  selector:
    matchLabels:
      app: gokub-tester
  template:
    spec:
      containers:
      - name: gokub-tester
        image: horvatic/gokub-tester:${TAG}
        ports:
          - containerPort: 8080
            name: "gokub-http"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
